# Daft2BigQuery

./: .gcloudignore  Makefile  README.md  config.example.toml  example_pubsub_payload.json  main.py  pyproject.toml
daft2bigquery/: __init__.py  bigquery.py  daft.py
deploy/: bigquery_example_schema.json  pubsub_payload.json
