[tool.poetry]
name = "linkace-cli"
version = "1.0.0"
description = "A CLI for the LinkAce API"
authors = ["Evan Smith <me@iamevan.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
linkace = 'linkace_cli:main'

[tool.poetry.dependencies]
python = "^3.8"
rich = "^9.5.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pylint = "^2.6.0"

[tool.pylint]
disable = "import-error"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
